--- a/src/OneTrueError.Client.NetStd/OneTrueError.Client.NetStd.csproj
+++ b/src/OneTrueError.Client.NetStd/OneTrueError.Client.NetStd.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.5</TargetFramework>
+    <TargetFrameworks>netstandard1.5;netstandard2.0</TargetFrameworks>
     <RootNamespace>OneTrueError.Client</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.5\OneTrueError.Client.NetStd.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
