--- a/src/OneTrueError.Client.NetStd/OneTrueError.Client.NetStd.csproj
+++ b/src/OneTrueError.Client.NetStd/OneTrueError.Client.NetStd.csproj
@@ -3,12 +3,30 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.5;netstandard2.0</TargetFrameworks>
     <RootNamespace>OneTrueError.Client</RootNamespace>
+    <PackageId>OneTrueError.Client.NetStd</PackageId>
+    <Authors>1TCompany AB</Authors>
+    <Description>Automates exception handling for .NET core applications</Description>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>Converted to vstudio 2017 csproj format</PackageReleaseNotes>
+    <Copyright>© Copyright 2017 1TCompany AB. All rights reserved.</Copyright>
+    <PackageTags>logger exceptions analysis .net-core netstandard</PackageTags>
+    <PackageIconUrl>http://onetrueerror.com/images/nuget_icon.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/onetrueerror/onetrueerror.client.netstd</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/onetrueerror/OneTrueError.Client.NetStandard/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://onetrueerror.com</PackageProjectUrl>
+    <Version>1.0.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard1.5\OneTrueError.Client.NetStd.xml</DocumentationFile>
+    <DocumentationFile>bin\$(Configuration)\netstandard1.5\OneTrueError.Client.NetStd.xml</DocumentationFile>
   </PropertyGroup>
-
+  <ItemGroup>
+    <Content Include="README.txt">
+      <Pack>true</Pack>
+      <PackagePath>README.txt</PackagePath>
+    </Content>
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="System.Security.Principal" Version="4.3.0" />
