--- a/src/Coderr.Client.NetStd.Demo/Coderr.Client.NetStd.Demo.csproj
+++ b/src/Coderr.Client.NetStd.Demo/Coderr.Client.NetStd.Demo.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>Coderr.Client.NetStd.Demo</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
