--- a/src/Coderr.Client.NetStd.IntegrationTests/Coderr.Client.NetStd.IntegrationTests.csproj
+++ b/src/Coderr.Client.NetStd.IntegrationTests/Coderr.Client.NetStd.IntegrationTests.csproj
@@ -3,20 +3,24 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DefaultItemExcludes>*.ncrunchproject</DefaultItemExcludes>
+    <AssemblyName>Coderr.Client.NetStd.IntegrationTests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotNetCqs" Version="1.0.1" />
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
-    <PackageReference Include="codeRR.IntegrationTests.Tools" Version="1.0.6" />
-    <PackageReference Include="xunit" Version="2.3.0-beta4-build3742" />
+    <PackageReference Include="OneTrueError.IntegrationTests.Tools" Version="1.0.6" />
+    <PackageReference Include="xunit" Version="2.3.0-beta5-build3769" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta5-build3769" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\codeRR.Client.NetStd\codeRR.Client.NetStd.csproj" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta4-build3742" />
   </ItemGroup>
 
   <ItemGroup>
