--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -9,14 +9,15 @@
     <Description>Automates exception handling for .NET core applications</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2017 © 1TCompany AB. All rights reserved.</Copyright>
-    <PackageTags>logger exceptions analysis .net-core netstandard</PackageTags>
+    <PackageTags>logger exceptions analysis .net-core NetStandard</PackageTags>
     <PackageIconUrl>http://coderrapp.com/images/nuget_icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/coderrapp/coderr.client.netstd</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/coderr/codeRR.Client.NetStandard/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/coderrapp/codeRR.Client.NetStd/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://coderrapp.com</PackageProjectUrl>
     <PackageReleaseNotes>Bug fixes </PackageReleaseNotes>
     <Version>1.0.1</Version>
+    <AssemblyName>Coderr.Client.NetStd</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\$(Configuration)\netstandard1.5\codeRR.Client.NetStd.xml</DocumentationFile>
