--- a/src/Coderr.Client.NetStd.IntegrationTests/Coderr.Client.NetStd.IntegrationTests.csproj
+++ b/src/Coderr.Client.NetStd.IntegrationTests/Coderr.Client.NetStd.IntegrationTests.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DefaultItemExcludes>*.ncrunchproject</DefaultItemExcludes>
-    <AssemblyName>Coderr.Client.NetStd.IntegrationTests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\codeRR.Client.NetStd\codeRR.Client.NetStd.csproj" />
+    <ProjectReference Include="..\Coderr.Client.NetStd\Coderr.Client.NetStd.csproj" />
   </ItemGroup>
 
   <ItemGroup>
