--- a/src/Coderr.Client.NetStd.Tests/Coderr.Client.NetStd.Tests.csproj
+++ b/src/Coderr.Client.NetStd.Tests/Coderr.Client.NetStd.Tests.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp2.0</TargetFramework>    
-    <AssemblyName>Coderr.Client.NetStd.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\codeRR.Client.NetStd\codeRR.Client.NetStd.csproj" />
+    <ProjectReference Include="..\Coderr.Client.NetStd\Coderr.Client.NetStd.csproj" />
   </ItemGroup>
 
   <ItemGroup>
