--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -3,35 +3,35 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.5;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RootNamespace>codeRR.Client</RootNamespace>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\codeRR.Client.NetStd.xml</DocumentationFile>
+    <PackageReleaseNotes>Added support for partitions and report pre processing.</PackageReleaseNotes>
+    <Version>1.1.0</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <PackageId>Coderr.Client.NetStd</PackageId>
     <Authors>1TCompany AB</Authors>
     <Description>Automates exception handling for .NET standard applications</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2017 © 1TCompany AB. All rights reserved.</Copyright>
     <PackageTags>logger exceptions analysis .net-core NetStandard</PackageTags>
-    <PackageIconUrl>http://coderrapp.com/images/nuget_icon.png</PackageIconUrl>
+    <PackageIconUrl>https://coderr.io/images/nuget_icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/coderrapp/coderr.client.netstd</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseUrl>https://raw.githubusercontent.com/coderrapp/codeRR.Client.NetStd/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://coderrapp.com</PackageProjectUrl>
-    <PackageReleaseNotes>Exceptions are now duplicate checked. Can also attach context collections directly to the exception.</PackageReleaseNotes>
-    <Version>1.0.3</Version>
-    <AssemblyName>Coderr.Client.NetStd</AssemblyName>
+    <PackageProjectUrl>https://coderr.io</PackageProjectUrl>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\$(Configuration)\netstandard1.5\codeRR.Client.NetStd.xml</DocumentationFile>
-  </PropertyGroup>
+
   <ItemGroup>
     <Content Include="README.txt">
       <Pack>true</Pack>
       <PackagePath>README.txt</PackagePath>
     </Content>
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Security.Principal" Version="4.3.0" />
     <PackageReference Include="System.IO.Compression" Version="4.3.0" />
   </ItemGroup>
-
 </Project>
