--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard1.5;netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\codeRR.Client.NetStd.xml</DocumentationFile>
-    <PackageReleaseNotes>Added support for partitions and report pre processing.</PackageReleaseNotes>
-    <Version>1.1.0</Version>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
+
+    <PackageReleaseNotes>All Coderr properties are now stored in the same collection.</PackageReleaseNotes>
+    <Version>1.1.1</Version>
   </PropertyGroup>
 
   <PropertyGroup>
