--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -6,8 +6,8 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
     <RootNamespace>Coderr.Client</RootNamespace>
 
-    <PackageReleaseNotes>Apparently I need to correct the namespaces too :O</PackageReleaseNotes>
-    <Version>1.1.3</Version>
+    <PackageReleaseNotes>Updated the readme</PackageReleaseNotes>
+    <Version>1.1.4</Version>
   </PropertyGroup>
 
   <PropertyGroup>
