--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -6,8 +6,8 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
     <RootNamespace>Coderr.Client</RootNamespace>
 
-    <PackageReleaseNotes>Updated the readme</PackageReleaseNotes>
-    <Version>1.1.4</Version>
+    <PackageReleaseNotes>Added support for Err.ReportLogicError()</PackageReleaseNotes>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <PropertyGroup>
