--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -7,20 +7,20 @@
     <RootNamespace>Coderr.Client</RootNamespace>
 
     <PackageReleaseNotes>Added IExceptionProcessor to make it more similar to the NET452 package.</PackageReleaseNotes>
-    <Version>1.2.4</Version>
+    <Version>1.2.5</Version>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Coderr.Client.NetStd</PackageId>
     <Authors>1TCompany AB</Authors>
-    <Description>Automates exception handling for .NET standard applications</Description>
+    <Description>Automates exception handling for .NET standard based applications</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2017 © 1TCompany AB. All rights reserved.</Copyright>
     <PackageTags>logger exceptions analysis .net-core NetStandard</PackageTags>
     <PackageIconUrl>https://coderr.io/images/nuget_icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/coderrapp/coderr.client.netstd</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/coderrapp/codeRR.Client.NetStd/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://coderr.io</PackageProjectUrl>
   </PropertyGroup>
 
