--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -6,8 +6,8 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
     <RootNamespace>Coderr.Client</RootNamespace>
 
-    <PackageReleaseNotes>Added IExceptionProcessor to make it more similar to the NET452 package.</PackageReleaseNotes>
-    <Version>1.2.5</Version>
+    <PackageReleaseNotes>Added copy constructor to ExceptionDTO.</PackageReleaseNotes>
+    <Version>1.2.6</Version>
   </PropertyGroup>
 
   <PropertyGroup>
