--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -6,8 +6,8 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
     <RootNamespace>Coderr.Client</RootNamespace>
 
-    <PackageReleaseNotes>A private setter for signature generation to be able to test backend for javascript apps.</PackageReleaseNotes>
-    <Version>1.2.9</Version>
+    <PackageReleaseNotes>Added CollectionBuilder.CreateTokenForCredentials which builds a tokenized identity which cannot be used to identify the user.</PackageReleaseNotes>
+    <Version>1.2.10</Version>
   </PropertyGroup>
 
   <PropertyGroup>
