--- a/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
+++ b/src/Coderr.Client.NetStd/Coderr.Client.NetStd.csproj
@@ -6,14 +6,14 @@
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Coderr.Client.NetStd.xml</DocumentationFile>
     <RootNamespace>Coderr.Client</RootNamespace>
 
-    <PackageReleaseNotes>Added CollectionBuilder.CreateTokenForCredentials which builds a tokenized identity which cannot be used to identify the user.</PackageReleaseNotes>
-    <Version>1.2.10</Version>
+    <PackageReleaseNotes>This library have been merged with "Coderr.Client" and is therefore obsolete.</PackageReleaseNotes>
+    <Version>1.2.12</Version>
   </PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Coderr.Client.NetStd</PackageId>
     <Authors>1TCompany AB</Authors>
-    <Description>Automates exception handling for .NET standard based applications</Description>
+    <Description>This library have been merged with "Coderr.Client" and is therefore obsolete.</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2017 © 1TCompany AB. All rights reserved.</Copyright>
     <PackageTags>logger exceptions analysis .net-core NetStandard</PackageTags>
